# software_guard_diy

./: .dockerignore  .env.docker  .env.docker.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  manage.bat
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: __init__.py  auth.py  category.py  config.py  download.py  request.py  software.py  stats.py  upload.py  user.py  vulnerability.py
backend/app/core/: config.py  deps.py  ldap.py  security.py  validators.py
backend/app/models/: __init__.py  audit.py  category.py  config.py  download.py  request.py  software.py  upload.py  user.py  vulnerability.py
backend/app/schemas/: __init__.py  category.py  config.py  download.py  request.py  software.py  upload.py  user.py  vulnerability.py
backend/app/services/: ai_service.py
backend/scripts/: download_logos.py  fix_failed_logos.py  reset_data.py
docs/superpowers/plans/: 2026-06-08-guest-access-software-permission-plan.md  2026-06-08-version-edit-feature-plan.md  2026-06-17-screenshot-images.md  2026-06-18-clipboard-paste-screenshot.md
docs/superpowers/specs/: 2026-06-08-guest-access-software-permission-design.md  2026-06-08-version-edit-feature-design.md  2026-06-17-screenshot-images-design.md  2026-06-18-clipboard-paste-screenshot-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  category.js  config.js  download.js  index.js  request.js  software.js  stats.js  upload.js  user.js  vulnerability.js
(+18 files in other folders)
